# flipperzero-usb-keyboard-bt-proxy

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.github/: README.md
.github/workflows/: build.yml  lint.yml  publish.yml  release.yml
fap/: application.fam  usb_keyboard_bt_proxy.c  usb_keyboard_bt_proxy.h
gui/: .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
gui/f0_usb_keyboard_bt_proxy/: __main__.py  bt.py  keyboard.py
