[tool.poetry]
name = "f0-usb-keyboard-bt-proxy"
version = "0.0.1a1"
description = "Utility to proxy keyboard events via BT -> FlipperZero -> USB"
authors = ["Tzoiker <tzoiker@gmail.com>"]
repository = "https://github.com/tzoiker/flipperzero-usb-keyboard-bt-proxy"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities",
    "Typing :: Typed",
]
readme = "README.md"
packages = [
  {include = "f0_usb_keyboard_bt_proxy"}
]
include = ["f0_usb_keyboard_bt_proxy/assets/arial.ttf"]

[tool.commitizen]
version_provider = "poetry"
version_scheme = "pep440"
tag_format = "v$version"
changelog_incremental = true
version_files = [
    "f0_usb_keyboard_bt_proxy/__version__.py",
]


[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
argclass = "^1.0"
PySide6 = "^6.0"
pysdl2-dll = "*"
pysdl2 = "*"

[tool.poetry.group.dev.dependencies]
black = "^25.0"
commitizen = "^4.0"
mypy = "^1.0"
pre-commit = "^4.0"
ruff = "^0.9.4"

[tool.poetry.scripts]
f0-usb-keyboard-bt-proxy = "f0_usb_keyboard_bt_proxy.__main__:main"

[tool.mypy]
allow_subclassing_any = true
allow_untyped_calls = true
allow_untyped_decorators = true
ignore_missing_imports = true
implicit_reexport = true
pretty = true
show_error_codes = true
strict = true
warn_return_any = false
files = [
    "f0_usb_keyboard_bt_proxy",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"
lint.select = [
  "BLE",
  "C90",
  "E",
  "F",
  "G",
  "I",
  "ICN",
  "ISC",
  "PLE",
  "Q",
  "RUF006",
  "RUF100",
  "T10",
  "T20",
  "TID",
  "UP",
  "W",
]
